<resources>
    <string name="app_name" translatable="false">MoneyManager</string>
    <string name="no_account">Welcome to Money Manager</string>
    <string name="no_accountbis">Press the button to continue</string>
    <string name="no_account_button">New Account</string>
    <string name="yesbutton">Yes</string>
    <string name="noButton">No</string>
    <string name="noAccounts">You don\'t have any account</string>
    <string name="noActivities">You have no activities linked to your account</string>
    <string name="nomFormPermiereCo">Last name :</string>
    <string name="prenomFormPermiereCo">First name :</string>
    <string name="nom">Last name</string>
    <string name="prenom">First name</string>
    <string name="deviseFormPermiereCo">Reference currency :</string>
    <string name="toastFormulaire">You have not completed the form correctly !</string>
    <string name="titreMainAct">Login</string>
    <string name="nouvUtilisateur">NEW USER</string>
    <string name="chargUtilisateur">LOAD USER</string>
    <string name="dateUser" translatable="false">user.txt</string>
    <string name="dataAccount" translatable="false">account.txt</string>
    <string name="account_name">Account name :</string>
    <string name="activity_name">Activity name :</string>
    <string name="activity_description">Activity description :</string>
    <string name="activity_balance">Awarded money :</string>
    <string name="activity_currency">Activity currency :</string>
    <string name="activity_date">Date of activity</string>
    <string name="account_description">Account description</string>
    <string name="account_balance">Account balance</string>
    <string name="textViewAccountList">Accounts list</string>
    <string name="textViewActivityList">Activities list for this account</string>
    <string name="textViewAccountTotalBalance">Total account balance :</string>
    <string name="total_balance_text">Total accounts balance :</string>
    <string name="total_balance_number" translatable="false"> 0.0 </string>
    <string name="account_currency">Account currency</string>
    <string name="toastConnexion">This user space does not exist</string>
    <string name="titreSupprimmerUnCompte">Which account(s) do you want to delete ?</string>
    <string name="titreSupprimmerUneActivite">Which activity(ies) do you want to delete ?</string>
    <string name="boutonAnnuler">CANCEL</string>
    <string name="boutonAjouter">ADD</string>
    <string name="boutonSupprimer">DELETE</string>
    <string name="ajoutAcc">ADD AN ACCOUNT</string>
    <string name="suppAcc">DELETE AN ACCOUNT</string>
    <string name="ajoutAct">ADD AN ACTIVITY</string>
    <string name="suppAct">DELETE AN ACTIVITY</string>
    <string name="spinnerMois">Month</string>
    <string name="spinnerAnnée">Year</string>
    <string name="dateDeDebut">Start date :</string>
    <string name="dateDeFin">End date :</string>
    <string name="date" translatable="false">Date :</string>
    <string name="periodicity">Periodicity :</string>
    <string name="titreFormAct">New activity</string>
    <string name="titreFormAcc">New account</string>
    <string name="nomCompteFormAcc">Account name :</string>
    <string name="soldeInitFormAcc">Initial balance :</string>
    <string name="descFormAcc">Account description :</string>
    <string name="deviseDeRefFormAcc">Reference currency :</string>
    <string name="deviseEuro">Euro</string>
    <string name="deviseDollarAmericain">American dollar</string>
    <string name="deviseLivreSterling">Pound sterling</string>
    <string name="deviseYen">Yen</string>
    <string name="deviseRouble">Ruble</string>
    <string name="devSymEuro">Euro (€)</string>
    <string name="devSymDollarAmericain">American dollar ($)</string>
    <string name="devSymLivreSterling">Pound sterling (£)</string>
    <string name="devSymYen">Yen (¥)</string>
    <string name="devSymRouble">Ruble (₽)</string>
    <string name="allAct">All the activities</string>
    <string name="allAcc">All the accounts</string>
    <string name="btnFiltrer">APPLY</string>
    <string name="titreFormUser">New User</string>
    <string name="aideFormAct">(+ or -) Number</string>
    <string-array name="currency" translatable="false">
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>$</item>
        <item>₽</item>
    </string-array>
    <string-array name="periodicity">
        <item></item>
        <item>Occasional</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annual</item>
        <item>Daily</item>
        <item>Fortnightly</item>
        <item>Quarterly</item>
    </string-array>
    <string-array name="mois">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="annee">
        <item>All</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
    </string-array>
</resources>