<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical">
        <TextView
            android:id="@+id/activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/activity_name"
            android:textSize="20dp"
            android:textColor="@color/third_blue"/>
        <TextView
            android:id="@+id/activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/activity_description"
            android:textColor="@color/secondTextColor"/>
        <TextView
            android:id="@+id/activity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/activity_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/activity_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/activity_balance"
            android:textColor="@color/firstTextColor"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/activity_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/activity_currency" />
    </LinearLayout>
</LinearLayout>