<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#F1F1F1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFormUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1343D2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <Button
            android:id="@+id/butAccCancel"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@drawable/ic_return_arrow"
            app:backgroundTint="#F1F1F1"/>
        <Button
            android:id="@+id/butAccOk"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_validate"
            app:backgroundTint="#F1F1F1"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarFormUser"
        android:layout_centerVertical="true"
        android:background="#F1F1F1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titreformUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/titreFormUser"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30dp" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/prenomFormPermiereCo" />
            <EditText
                android:id="@+id/edAccName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/nomFormPermiereCo" />
            <EditText
                android:id="@+id/edAccName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/deviseFormPermiereCo" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/butgpUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/butEuroPer"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/deviseEuro" />

                    <RadioButton
                        android:id="@+id/butDolarPer"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/deviseDollarAmericain" />

                    <RadioButton
                        android:id="@+id/butLivrePer"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/deviseLivreSterling" />

                    <RadioButton
                        android:id="@+id/butYenPer"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/deviseYen" />

                    <RadioButton
                        android:id="@+id/butRouble"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/deviseRouble" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>