<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSuppAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#606060"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <Button
            android:id="@+id/butSuppAccCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/boutonAnnuler"
            android:textSize="10dp"
            app:backgroundTint="@color/teal_700"/>
        <Button
            android:id="@+id/butSuppAccOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/boutonSupprimer"
            android:textSize="10dp"
            app:backgroundTint="#A52A1C"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/TitreAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/titreSupprimmerUnCompte"
        android:textSize="25dp"
        android:layout_below="@+id/toolbarSuppAcc"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/account_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/TitreAccount"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>