<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#F1F1F1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFormAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1343D2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <Button
            android:id="@+id/butActivityCancel"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@drawable/ic_return_arrow"
            app:backgroundTint="#F1F1F1"/>
        <Button
            android:id="@+id/butActivityOk"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_validate"
            app:backgroundTint="#F1F1F1"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarFormAct"
        android:layout_centerVertical="true"
        android:background="#F1F1F1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/titreformActivite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/titreFormAct"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30dp" />
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="20dp">
                    <TextView
                        android:id="@+id/nomActivite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/activity_name" />
                    <EditText
                        android:id="@+id/ednomActivite"
                        android:layout_width="143dp"
                        android:layout_height="37dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:textSize="16dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/balanceParDefaut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_balance" />
                    <EditText
                        android:id="@+id/edValueActivite"
                        android:layout_width="143dp"
                        android:layout_height="37dp"
                        android:ems="10"
                        android:inputType="phone"
                        android:text=""
                        android:hint="@string/aideFormAct"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/descriptionActivite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_description" />
                <EditText
                    android:id="@+id/eddescriptionActivite"
                    android:layout_width="143dp"
                    android:layout_height="37dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/periodiciteActivite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodicity" />
                <Spinner
                    android:id="@+id/periodicite_spinner"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dateDebutLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateDeDebut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateDeDebut" />

                <DatePicker
                    android:id="@+id/dateDebutPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dateFinLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateDeFin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateDeFin" />

                <DatePicker
                    android:id="@+id/dateFinPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>